SERVER-30842 Don't try to set last optime for client backwards after rollback

(cherry picked from commit cee116558d7771b520c0fd4dd239c0a987dcc2ec)